@@ -72,6 +72,7 @@ DISTFILES = \
 	data/images/remove.png \
 	data/images/send-im.png \
 	data/images/smileys.png \
+	data/images/userlist.png \
 	data/images/warn.png \
 	ChangeLog \
 	README \
